fortio/cert.yaml
apiVersion: v1
kind: Service
metadata:
  name: cert-manager-ingress1
  namespace: istio-system
  annotations:
    auth.istio.io/8089: NONE
spec:
  ports:
  - port: 8089
    name: http-certingr
  selector:
    certmanager.k8s.io/domain: fortio.istio.io
---
apiVersion: v1
kind: Service
metadata:
  name: cert-manager-ingress2
  namespace: istio-system
  annotations:
    auth.istio.io/8089: NONE
spec:
  ports:
  - port: 8089
    name: http-certingr
  selector:
    certmanager.k8s.io/domain: istio.fortio.org
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
    certmanager.k8s.io/acme-challenge-type: http01
    certmanager.k8s.io/issuer: letsencrypt-staging
# not working:
#    kubernetes.io/ingress.global-static-ip-name: fortio-prod-ip
  name: istio-ingress-certs
  namespace: istio-system
spec:
  rules:
  - http:
      paths:
        # cert-manager adds its own rules to the ingress but we need our
        # rule because we have to selectively disable auth for the service
        # and route to the service and not a nodeport
      - path: /.well-known/acme-challenge/.*
        backend:
          serviceName: cert-manager-ingress1
          servicePort: http-certingr
    # Unfortunately host isn't an array and there are no "*" allowed for all
    host: fortio.istio.io
  - http:
      paths:
      - path: /.well-known/acme-challenge/.*
        backend:
          serviceName: cert-manager-ingress2
          servicePort: http-certingr
    host: istio.fortio.org
